fix for wrong positioning

--- a/src/styles/final_board_styles.css
+++ b/src/styles/final_board_styles.css
@@ -3,7 +3,7 @@
   position: fixed;
   right: 5%;
   top: 8%;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
 }
 
 .navigation_bar .pint_mock_icon_container {
@@ -28,9 +28,9 @@
   grid-template-columns: repeat(auto-fill, 250px);
   grid-auto-rows: 10px;
   justify-content: center;
-  position: fixed;
+  position: absolute;
   top: 8%;
-  background-color: purple;
+  /* background-color: purple; */
 }
 
 .card {
